<?xml version="1.0"?>
<package format="2">
  <name>rsu_tracker</name>
  <version>0.0.0</version>
  <description>The rsu_tracker package</description>
  <maintainer email="chao.shun.cheng.tw@gmail.com">Chao Shun Cheng</maintainer>
  <author email="chao.shun.cheng.tw@gmail.com">Chao Shun Cheng</author>
  <license>Apache-2.0</license>

  <buildtool_depend>autoware_build_flags</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>autoware_msgs</depend>
  <depend>amathutils_lib</depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>roslint</depend>
  <depend>tf</depend>
  <depend>vector_map</depend>
  <depend>lanelet2_extension</depend>
</package>
